<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/regular_padding"
        android:paddingEnd="@dimen/regular_padding"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/instruction0"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction1"
            app:fontFamily="@font/ibm_plex_serif_bold"
            />

        <TextView
            android:id="@+id/instruction1"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction2"
            app:fontFamily="@font/ibm_plex_serif_bold"
            />

        <TextView
            android:id="@+id/instruction2"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction3"
            app:fontFamily="@font/ibm_plex_serif_bold"
            />

        <TextView
            android:id="@+id/instruction3"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction4"
            app:fontFamily="@font/ibm_plex_serif_bold"
            />

        <TextView
            android:id="@+id/instruction4"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction5"
            app:fontFamily="@font/ibm_plex_serif_bold"
            />

        <Button
            android:id="@+id/instructionButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif"
            android:text="@string/button_instruction"
            />

    </LinearLayout>
</layout>

